--- a/CalculatorProject/src/app/juros-compostos/juros-compostos.component.html
+++ b/CalculatorProject/src/app/juros-compostos/juros-compostos.component.html
@@ -4,8 +4,8 @@
         <h1 class="title-head">Focco</h1>
         <a href="#" class="link-head">=</a>
     </div>
-    <div class="container-calculadora-juros">
 
+    <div class="container-calculadora-juros">
         <div class="title-calculadora-juros">
             <h1>Calculadora</h1>
             <h1>Juros Compostos</h1>
@@ -14,41 +14,49 @@
 
         <form [formGroup]="jurosCompostos" (ngSubmit)="submit()" #formdir="ngForm">
     
-            <div id="formGroup">
+            <div id="formGroup" class="formgroup">
 
-                <div class="input-um">
-                    <div class="valor-inicial">
-                        <label for="" class="label-valor-inicial">Valor Inicial</label>
-                        <input type="number" id="valorInicial" formControlName="valorInicial" placeholder=" 0,00" class=".input-valor-inicial" required>
+                <div class="valor-inicial">
+                    <label for="" class="label-valor-inicial">Valor Inicial</label>
+                    <div class="barra">
+                        <div class="quadrado-sifrao"><span class="span-input">R$</span></div>
+                        <input type="number" id="valorInicial" formControlName="valorInicial" placeholder=" 0,00" autocomplete="off" class="input-valor-inicial" required>
                     </div>
                 </div>
-        
-                <div class="valor-mensal">
-                    <label for="">Valor Mensal</label>
-                    <input type="number" id="valorMensal" formControlName="valorMensal" placeholder=" 0,00" required>
+                <div class="valor-inicial">
+                    <label for="" class="label-valor-inicial ">Valor Mensal</label>
+                    <div class="barra">
+                        <div class="quadrado-sifrao"><span class="span-input">R$</span></div>
+                        <input type="number" id="valorMensal" formControlName="valorMensal" placeholder=" 0,00" class="input-valor-inicial" required>
+                    </div>
                 </div>
                 
-                <div class="taxa-juros">
+                <div class="valor-inicial">
                     <label for="">Taxa De juros</label>
-                    <input type="number" id="taxaJuros" formControlName="taxaJuros" placeholder="0,00" required>
-                    <select id="typeTax" formControlName="typeTax" required>
+                    <select id="typeTax" formControlName="typeTax" class="quadrado-select" required>
                         <option value="Anual">Anual</option>
                         <option value="Mensal">Mensal</option>
                     </select>
+                    <div class="barra">
+                        <div class="quadrado-sifrao"><span class="span-input">%</span></div>
+                        <input type="number" id="taxaJuros" formControlName="taxaJuros" placeholder="0,00" class="input-valor-inicial" required>
+                    </div>
                 </div>
         
                 
-                <div class="tempo">
+                <div class="valor-inicial">
                     <label for="">Periodo em</label>
-                    <input type="number" id="tempo" formControlName="tempo" placeholder=" 0,00" required>
-                    <select id="typeTime" formControlName="typeTime" required>
+                    <div class="barra">
+                        <input type="number" id="tempo" formControlName="tempo" placeholder=" 0,00" class="input-periodo" required>
+                    </div>
+                    <select id="typeTime" formControlName="typeTime" class="quadrado-select" required>
                         <option value="Anos">Anos</option>
                         <option value="Meses">Meses</option>
                     </select>
                 </div>
         
-                <button type="submit" [disabled]="!jurosCompostos.valid">Calcular</button>
-                <button>Limpar</button>    
+                <button type="submit" class="btn-calcular" [disabled]="!jurosCompostos.valid">Calcular</button>
+                <button class="btn-limpar">Limpar</button>    
             </div>
         </form>
     </div>
