Criação da tela de calculo e demonstração dos resultados obtidos

--- a/CalculatorProject/src/app/juros-compostos/juros-compostos.component.css
+++ b/CalculatorProject/src/app/juros-compostos/juros-compostos.component.css
@@ -87,6 +87,7 @@
     border: none;
     background-color: #D5DEEF;
     box-shadow: 1px 1px 15px rgb(168, 168, 168);
+    outline: none;
 
 }
 
@@ -132,6 +133,7 @@
     border: none;
     background-color: #D5DEEF;
     box-shadow: 1px 1px 15px rgb(168, 168, 168);
+    outline: none;
 
 }
 
