--- a/CalculatorProject/src/app/juros-compostos/juros-compostos.component.html
+++ b/CalculatorProject/src/app/juros-compostos/juros-compostos.component.html
@@ -20,7 +20,8 @@
                     <label for="" class="label-valor-inicial">Valor Inicial</label>
                     <div class="barra">
                         <div class="quadrado-sifrao"><span class="span-input">R$</span></div>
-                        <input type="number" id="valorInicial" formControlName="valorInicial" placeholder=" 0,00" autocomplete="off" class="input-valor-inicial" required>
+                        <input type="number" id="valorInicial" formControlName="valorInicial" placeholder=" 0,00" autocomplete="off" 
+                        class="input-valor-inicial" required>
                     </div>
                 </div>
                 <div class="valor-inicial">
