--- a/CalculatorProject/src/styles.css
+++ b/CalculatorProject/src/styles.css
@@ -1,10 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Inter", sans-serif;
 }
 
 body{
     background-color:  #395886;;
 }
+
+@media (max-width: 767px) {
+    body {
+      overflow-x: hidden;
+    }
+  }
