--- a/CalculatorProject/src/app/result/result.component.html
+++ b/CalculatorProject/src/app/result/result.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="retangulo-dados">
             <h4 class="title-quadrado">Taxa de Juros</h4>
-            <span class="text-span">{{taxaJurosFormatado}} (Anual)</span>
+            <span class="text-span">{{taxaJurosFormatado}} ({{typeTaxMonthString}})</span>
         </div>
         <div class="retangulo-dados">
             <h4 class="title-quadrado">Periodo em</h4>
