--- a/CalculatorProject/src/app/result/result.component.html
+++ b/CalculatorProject/src/app/result/result.component.html
@@ -3,7 +3,7 @@
     <div class="first-section">
         <div class="retangulo-dados">
             <h4 class="title-quadrado">Valor Inicial</h4>
-            <span class="text-span">{{valorInicialFormatado}}</span>
+            <span class="text-span">{{formatarParaReais(projectcount)}}</span>
         </div>
         <div class="retangulo-dados">
             <h4  class="title-quadrado">Valor Mensal</h4>
@@ -23,7 +23,7 @@
     <div class="second-section">
         <div class="container-result">
             <h4 class="title-valor-final">Valor Final</h4>
-            <span class="span-valor-final">{{valorFinalFormatado}}</span>
+            <span class="span-valor-final">{{formatarParaReais(valorFinalAnimation)}}</span>
         </div>
         <div class="container-result">
             <h4 class="title-valor-final">Valor Total Investido</h4>
